Fix alignment and font issues; added comments to the code for clarity

--- a/src/components/ComponentStyles/WhyIntrodo.css
+++ b/src/components/ComponentStyles/WhyIntrodo.css
@@ -9,7 +9,7 @@ h3 {
 
 .why-intro-title {
   display: inline-block;
-  font-family: 'MonaSansMedium', sans-serif;
+  font-family: 'MonaSansMedium', 'Archivo';
   font-weight: 900;
   font-size: 12.8px;
   line-height: 19.2px;
@@ -31,16 +31,12 @@ h3 {
 .why-intro-grid {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  /* 6 columns layout */
   grid-template-rows: repeat(5, auto);
-  /* Added 5 rows for the new feature */
   gap: 20px;
   padding: 0 30px;
-  /* Add padding to create space between the grid and the screen */
 }
 
 .why-intro-box {
-  /* background: linear-gradient(135deg, #FFBB1A, #FF6347); */
   color: white;
   border-radius: 20px;
   padding: 20px;
@@ -88,7 +84,6 @@ h3 {
   grid-row: span 4;
   background: linear-gradient(135deg, rgba(255, 174, 92, 1), rgba(253, 65, 144, 1));
   margin-left: 10px;
-  /* Add margin to create additional space from the screen */
 }
 
 /* Updated style for the Global Payroll Simplicity heading */
@@ -113,17 +108,13 @@ h3 {
 
 .smart-insights {
   grid-column: span 2;
-  /* This spans across 2 columns */
   grid-row: span 1;
-  /* This spans across 1 row */
   background: linear-gradient(to top, rgba(168, 197, 255, 1), rgba(253, 65, 144, 1));
 }
 
 .new-feature-box {
   grid-column: span 2;
-  /* This spans across 2 columns */
   grid-row: span 4;
-  /* Placed below Smart Insights */
   background: linear-gradient(to top, rgba(94, 156, 255, 1), rgba(105, 72, 154, 1));
 }
 
@@ -157,15 +148,10 @@ h3 {
 .rock-solid-compliance {
   display: flex;
   justify-content: space-between;
-  /* Space between the text and image */
   align-items: center;
-  /* Vertically center both text and image */
   background: linear-gradient(135deg, rgba(253, 107, 168, 1), rgba(94, 156, 255, 1));
-  /* Gradient background */
   padding: 20px;
-  /* Padding around the content */
   border-radius: 20px;
-  /* Rounded corners */
   flex-direction: row !important;
   padding: 0 !important;
   overflow: hidden;
@@ -173,7 +159,6 @@ h3 {
 
 .compliance-text {
   flex: 1;
-  /* Take up available space on the left */
 }
 
 .rock-solid-compliance-title {
@@ -196,14 +181,10 @@ h3 {
 
 .compliance-image {
   flex-shrink: 0;
-  /* Prevent the image from shrinking */
   width: 150px;
-  /* Set a fixed width for the image */
   height: auto;
   margin-left: 20px;
-  /* Space between the text and image */
   border-radius: 10px;
-  /* Rounded corners for the image */
 }
 
 .cloud-powered-savings {
@@ -238,7 +219,6 @@ h3 {
 
 .payroll-card {
   position: absolute;
-  /* top: 50px; */
   background-color: rgba(255, 255, 255, 1);
   border-radius: 19.23px;
   padding: 19.21px;
@@ -276,7 +256,6 @@ h3 {
   width: 16px;
   height: 16px;
   margin-right: 5px;
-  /* Adjust the spacing as needed */
 }
 
 .no-padding {
