--- a/src/components/MobileComponents/ComponentStyles/MobileFooter.css
+++ b/src/components/MobileComponents/ComponentStyles/MobileFooter.css
@@ -41,12 +41,14 @@
     display: flex;
     align-items: center;
     margin-left: auto;
-    padding: 5px 15px;
+    padding: 9px 15px;
     border-radius: 20px;
     background-color: transparent;
     color: rgba(255, 255, 255, 1);
-    font-size: 14px;
+    font-size: 9.9px;
     border: 1px solid #ccc;
+    font-family: 'MonaSansMedium';
+    line-height: '11.99px';
 }
 
 .down-arrow-icon {
