--- a/src/components/MobileComponents/ComponentStyles/MobileHeader.css
+++ b/src/components/MobileComponents/ComponentStyles/MobileHeader.css
@@ -21,6 +21,9 @@
     margin-left: 0.5rem;
     font-weight: bold;
     font-size: 1.2rem;
+    font-family: 'MonaSansBold', sans-serif;
+    font-weight: 600;
+    font-size: 20px;
   }
  
   /* Drawer menu styles */
@@ -93,7 +96,6 @@
   .mob-dropdown-item {
     padding: 10px;
     cursor: pointer;
-    text-align: left;
     color: rgba(111, 104, 129, 1);
     border-radius: 8px;
     font-family: 'MonaSansBold', sans-serif;
